--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "node --max-old-space-size=8192 node_modules/next/dist/bin/next dev --turbopack",
+    "build": "node --max-old-space-size=8192 node_modules/next/dist/bin/next build --turbopack",
     "start": "next start"
   },
   "dependencies": {
@@ -18,7 +18,8 @@
     "openai": "^6.3.0",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
